--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -14,8 +14,8 @@ author_profile: true
 
 
 <!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
+{% if site.portfolio_category %}
+  {% for category in site.portfolio_category  %}
     {% assign title_shown = false %}
     {% for post in site..portfolio reversed %}
       {% if post.category != category[0] %}
