--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -29,7 +29,7 @@ author_profile: true
     {% endfor %}
   {% endfor %}
 {% else %}
-  {% for post in site..portfolio reversed %}
+  {% for post in site.portfolio reversed %}
     {% include archive-single.html %}
   {% endfor %}
 {% endif %}
